maze.lessons.maze.wallfollower.WallFollowerMaze.scala.code
def keepHandOnSideWall(){
  gauche();
  while(estFaceMur()){
    droite();
  }
  avance();
}

override def run() {
  while(!estSurBiscruit()){
    keepHandOnSideWall();
  }
  prendBiscuit();
}